sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:9: error: reassignment to val
        i=1
         ^AlgGnomeSort:12: error: reassignment to val
        i=i-1
         ^AlgGnomeSort:15: error: reassignment to val
        i=i+1
         ^